# linux-voice-assistant

./: .gitignore  CHANGELOG.md  DEBUGGING_STEPS.md  Dockerfile.test  README.md  TEST_FAILURE_ANALYSIS.md  categorize_test_failures.py  clear_all_cache.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_functions_directly.py  verify_code.py
.github/workflows/: tests.yml
XVF3800/: 99-respeaker-xvf3800.rules
docs/: LVA_PROJECT_PRIMER_v5.yaml  LVA_PROJECT_SENDSPIN_CLIENT_PRIMER_v5.yaml  LVA_UPSTREAM_DEVIATION_ANALYSIS_v2.md  install_pipewire  install_pipewire.md  install_pulseaudio.md  linux-voice-assistant-2mic-install.md  linux-voice-assistant-install.md  linux-voice-assistant-xvf3800-mute.md  linux-voice-assistant-xvf3800.md  lva-desktop.md  testing-guide.md  xvf3800_legacy_led_effects_mapping.md  xvf3800_usb_led_testing.md
hav_sat/: __main__.py  api_server.py  entity.py  microwakeword.py  mpv_player.py  util.py
linux_voice_assistant/: __main__.py  api_server.py  audio_engine.py  audio_volume.py  base_detector.py  button_controller.py  config.json  config.json.example  config.py  detector_factory.py  entity.py  event_bus.py  event_led.py  event_led_grove.py  event_led_grove.py_hal  event_led_grove.py_marvin  event_led_hal.py  event_led_marvin.py  led_controller.py  led_controller_hal.py  led_controller_marvin.py  microwakeword.py  models.py  mpv_player.py  mqtt_controller.py  openwakeword.py  openwakeword_client.py  satellite.py  util.py  wakeword.py  wakeword_indicator.py  xvf3800_button_controller.py  xvf3800_controller.py  xvf3800_led_backend.py  zeroconf.py
linux_voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
linux_voice_assistant/sendspin/: __init__.py  client.py  clock_sync.py  controller.py  discovery.py  (+2 more)
respeaker2mic/: install-respeaker-drivers.sh
script/: format  gen-esphome-avahi.sh  lint  list_mpv_audio_devices.py  run  setup  tray  update_lva
service/: 10-avahi.conf  10-tuning.conf  aec-module-load.service  alsa-mww-linux-voice-assistant.service  alsa-oww-linux-voice-assistant.service  linux-voice-assistant-tray.service  linux-voice-assistant.service  pa-linux-voice-assistant.service  pa-mww-linux-voice-assistant.service  pa-oww-linux-voice-assistant.service  user-linux-voice-assistant.service  user-pa-linux-voice-assistant.service  user-pa-mww-linux-voice-assistant.service.service  user-pa-oww-linux-voice-assistant.service.service  user-pw-linux-voice-assistant.service  user-pw-mww-linux-voice-assistant.service.service.service  user-pw-oww-linux-voice-assistant.service.service  user-wyoming-openwakeword.service.service  wyoming-openwakeword.service
sounds/: nothing.flac  thinking_music.flac  thinking_music_2.flac  thinking_music_3.flac
tests/: README.md  conftest.py  diagnose_imports.py  lva_mic_capture.py  test_audio_engine.py  test_button_controller.py  test_configuration.py  test_end_to_end_workflows.py  test_event_bus.py  test_format_mac.py  test_led_controller.py  test_microwakeword.py  test_mqtt_controller.py  test_openwakeword.py  test_sendspin_client.py  test_sendspin_discovery.py  test_state_management.py  test_volume_management.py  test_xvf3800_button_controller.py  test_xvf3800_led_backend.py  xvf3800_hid_mute_probe.py  xvf3800_probe.py
tray_client/: __main__.py
wakewords/: hey_luna.json
wyoming-openwakeword/: requirements.txt  stop_v0.1.tflite  test_oww_models.py  test_oww_models.txt  verify_oww_models.sh
(+18 files in other folders)
