[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "linux-voice-assistant"
version     = "1.0.0"
license     = {text = "Apache-2.0"}
description = "Linux voice assistant for Home Assistant using the ESPHome protocol"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "voice", "esphome", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"
dependencies = [
    "aioesphomeapi==37.2.1",
    "sounddevice<1",
    "numpy>=2,<3",
    "pymicro-features==1.0.0",
    "python-mpv=>1,<2",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.2.0",
    "mypy==1.14.0",
    "pylint==3.2.7",
    "pytest==8.3.5",
]

[project.urls]
"Source Code" = "http://github.com/OHF-Voice/linux-voice-assistant"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["linux_voice_assistant"]
exclude = ["tests", "tests.*"]
