[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "linux-voice-assistant"
version     = "1.0.0"
license     = {text = "Apache-2.0"}
description = "Linux voice assistant for Home Assistant using the ESPHome protocol"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "voice", "esphome", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9.0"
dependencies = [
    "aioesphomeapi==43.9.1",
    "soundcard<1",
    "numpy>=2,<3",
    "pymicro-wakeword>=2,<3",
    "pyopen-wakeword>=1,<2",
    "python-mpv>=1,<2",
    "zeroconf<1",
    "paho-mqtt",
    "adafruit-circuitpython-dotstar",
    "adafruit-circuitpython-neopixel",
    "adafruit-circuitpython-neopixel-spi",
    "RPi.GPIO",
    "gpiozero",
    "spidev",
    "pyusb",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
]

# Optional GUI/tray dependencies. Only needed on desktop installs that use lva_tray_client.
tray = [
    "PyQt5>=5.15",
]

[project.urls]
"Source Code" = "https://github.com/imonlinux/linux-voice-assistant"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["linux_voice_assistant"]
exclude = ["tests", "tests.*"]
